fix scoring - again. Start to prep for soli and wedding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(doppelkopf)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(doppelkopf src/main.cpp src/Game.cpp src/Game.h src/card.cpp src/card.h src/Player.cpp src/Player.h src/Ruleset.cpp src/Ruleset.h src/helper.cpp src/helper.h)
+add_executable(doppelkopf src/main.cpp src/Game.cpp src/Game.h src/card.cpp src/card.h src/Player.cpp src/Player.h src/Ruleset.cpp src/Ruleset.h src/helper.cpp src/helper.h src/Round.cpp src/Round.h)
