--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/googletest"]
 	path = libs/googletest
-	url = git@github.com:abseil/googletest.git
+	url = https://github.com/abseil/googletest.git
