Test fix, Cmake changes(#11)
* fix for setup on another windows machine

* Add more examples, make it work, reorganize includes

* Attempt to fix travis

* Rename everything to lowercase

* More renaming, fixing cmakelists

* Travis fix

--- a/src/exampleBot/CMakeLists.txt
+++ b/src/exampleBot/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(SOURCE
         ${SOURCE}
-        ${CMAKE_CURRENT_SOURCE_DIR}/ExampleBot.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/ExampleBot.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/exampleBot.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/exampleBot.h
         PARENT_SCOPE
         )
