--- a/tests/core/CMakeLists.txt
+++ b/tests/core/CMakeLists.txt
@@ -1,3 +1,5 @@
 set(test_sources ${test_sources}
         ${CMAKE_CURRENT_SOURCE_DIR}/game_tests.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/card_tests.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ruleset_tests.cpp
         PARENT_SCOPE)
