--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,14 +2,14 @@ set(SOURCE
         ${SOURCE}
         ${CMAKE_CURRENT_SOURCE_DIR}/card.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/card.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/Game.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/game.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/game.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/helper.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/helper.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/Player.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/Player.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/Round.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/Round.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/Ruleset.cpp
-        ${CMAKE_CURRENT_SOURCE_DIR}/Ruleset.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/player.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/player.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/round.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/round.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/ruleset.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ruleset.h
         PARENT_SCOPE)
