--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(core)
 add_subdirectory(exampleBot)
+add_subdirectory(pythonBot)
 
 #this has to be here to propegate all the sources to the highest cmakelist
 set(SOURCE ${SOURCE}
