--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,16 +7,21 @@ set(COVERAGE OFF CACHE BOOL "Coverage")
 
 add_subdirectory(src)
 
+set(EXE_NAME doppelkopf)
 
+add_executable(${EXE_NAME} ${SOURCE} ${CORE})
 
-add_executable(doppelkopf ${SOURCE} ${CORE})
+#find_package(PythonLibs REQUIRED)
+#target_include_directories(${EXE_NAME} PUBLIC ${PYTHON_INCLUDE_DIRS})
+#target_link_libraries(${EXE_NAME} PUBLIC ${PYTHON_LIBRARIES})
 
-find_package(PythonLibs REQUIRED)
-include_directories(${PYTHON_INCLUDE_DIRS})
-target_link_libraries(doppelkopf ${PYTHON_LIBRARIES})
+message("PYTHONLIBS")
+message("   PYTHON_INCLUDE_DIRS ${PYTHON_INCLUDE_DIRS}")
+message("   PYTHON_LIBRARIES ${PYTHON_LIBRARIES}")
 
 #tests are off by default, pass -DADD_TESTS=ON in to cmake to activate tests (and reset cache)
 option(ADD_TESTS "Set to ON to build with tests." OFF)
+
 
 IF(ADD_TESTS)
 
@@ -24,7 +29,6 @@ IF(ADD_TESTS)
     add_subdirectory(libs/googletest)
     enable_testing()
     include_directories(${gtest_SOURCE_DIR}/include ${COMMON_INCLUDES})
-    include_directories(src)
 
 
     add_subdirectory(tests)
